--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
             <artifactId>mockito-core</artifactId>
             <version>5.3.1</version>
             <scope>test</scope>
+        <exclusions>
+            <exclusion>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-inline</artifactId>
+            </exclusion>
+        </exclusions>
         </dependency>
 
         <!-- Mockito JUnit 5 Integration -->
@@ -164,7 +170,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.8</version>
+                <version>0.8.10</version>
                 <executions>
                     <execution>
                         <goals>
