--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 server.port=8080
 spring.profiles.default=dev
+management.endpoints.web.exposure.include=health
+management.health.diskspace.enabled=true
