Adicionando Dockerfile e comentarios das modificacoes e ajuste no Read.me para subir o conteiner Docker

--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,20 @@
     <name>dummyjson-client</name>
     <description>Demo project for interacting with DummyJson API</description>
 
+    <!--
+    Atualizações no POM:
+    - Spring Boot: 2.6.12 -> 3.2.5 
+    - Java: 1.8 -> 17 
+    - javax.validation -> jakarta.validation 
+    - Dependências de Teste: JUnit 4 -> JUnit 5
+    - Atualizacao de versoes dos plugins de Build e Relatórios
+    -->
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.2.5</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/> 
     </parent>
 
     <properties>
@@ -28,6 +37,18 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>org.hibernate.validator</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>8.0.0.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish</groupId>
+            <artifactId>jakarta.el</artifactId>
+            <version>4.0.2</version>
+        </dependency>
+
         <!-- Spring Boot Web Starter -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -178,6 +199,18 @@
                         <version>1.0.0</version>
                     </dependency>
                 </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>3.2.5</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
